peergos/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: peergos-webdav
spec:
  ports:
  - name: http
    port: 8090
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: peergos-webdav
  type: ClusterIP
