peergos/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: peergos-webdav
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: cert-manager-redirect-https@kubernetescrd
spec:
  rules:
  - host: peergos-webdav.k3s.yorgos.net.gr
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: peergos-webdav
              port:
                name: http
  tls:
    - secretName: peergos-webdav-tls
      hosts:
        - peergos-webdav.k3s.yorgos.net.gr
